@@ -3,7 +3,7 @@ grammar A;
 s : q=e {System.out.println("result = "+$e.v);} ;
 
 e returns [int v]
-  : a=e '*' b=e {$v = $a.v * $b.v;}	-> mult
+  : a=e op='*' b=e {$v = $a.v * $b.v;}	-> mult
   | a=e '+' b=e {$v = $a.v + $b.v;}	-> add
   | INT 	{$v = $INT.int;}
   | '(' x=e ')' {$v = $x.v;}
